# mono-deps-analyzer

./: .gitattributes  .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  tox.ini
src/monodpes/: __main__.py  analyzer.py  cli.py
tests/: test_analyzer.py  test_cli.py
