[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mono-deps-analyzer"
version = "0.1.0"
authors = [
  { name="Your Name", email="your.email@example.com" },
]
description = "Monorepo dependency analyzer for Python projects"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Build Tools",
]
dependencies = [
    "importlib-metadata>=4.0.0",
    "packaging>=21.0"
]

[project.urls]
"Homepage" = "https://github.com/yourusername/mono-deps-analyzer"
"Bug Tracker" = "https://github.com/yourusername/mono-deps-analyzer/issues"

[project.scripts]
monodeps = "mono_deps_analyzer.cli:main"

[project.entry-points."console_scripts"]
monodeps = "mono_deps_analyzer.cli:main"

